--- a/styles/main.css
+++ b/styles/main.css
@@ -225,7 +225,7 @@
     .game-version.selected {
         padding: 0;
         width: 25%;
-        height: calc(100vh - 83px);
+        min-height: 100vh;
         float: left;
         display: flex;
         align-items: center;
@@ -241,6 +241,7 @@
     .selected .title-logo {
         height: 9rem;
         width: 100%;
+        margin-top: 1rem;
     }
 
     .selected .title-logo > img {
